# voxtranslate

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CLAUDE_CODE_PROMPT_V2.md  LICENSE  README.md  docker-compose.yml  skills-lock.json
.claude/skills/deepgram-api/: SKILL.md
.github/workflows/: ci.yml
client/: Dockerfile  astro.config.mjs  mcr.config.cjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vitest.config.ts
client/e2e/: a11y.spec.ts  billing.spec.ts  call.spec.ts  cov.ts  global-setup.ts  global-teardown.ts  helpers.ts  home.spec.ts  prejoin.spec.ts  room-full.spec.ts  screenshare.spec.ts
client/public/: manifest.webmanifest  sw.js
client/src/layouts/: Base.astro  Legal.astro
client/src/pages/: 404.astro  acceptable-use.astro  index.astro  privacy.astro  terms.astro
client/src/scripts/: api.ts  app.ts  audio-capture.test.ts  auth.ts  (+30 more)
directus/: .env.example  README.md  docker-compose.yml  gen-content-seed.mjs  gen-i18n-seed.mjs  seed-content.sql  seed-i18n.sql
directus/legal/: acceptable-use.de.md  acceptable-use.en.md  acceptable-use.es.md  acceptable-use.fr.md  acceptable-use.it.md  acceptable-use.ja.md  acceptable-use.pt.md  acceptable-use.zh.md  privacy.de.md  privacy.en.md  privacy.es.md  privacy.fr.md  privacy.it.md  privacy.ja.md  privacy.pt.md  privacy.zh.md  terms.de.md  terms.en.md  terms.es.md  terms.fr.md  terms.it.md  terms.ja.md  terms.pt.md  terms.zh.md
scripts/: pipeline-test.mjs
server/: .env.example  Cargo.toml  Dockerfile  railway.toml
server/migrations/: 001_init.sql  002_safety.sql  003_backoffice.sql  004_transcripts.sql  005_features.sql  006_chat_files.sql
server/scripts/: create_stripe_prices.py
server/src/: admin.rs  api.rs  auth.rs  billing.rs  config.rs  content.rs  db.rs  deepgram.rs  email.rs  files.rs  glossary.rs  groq.rs  lib.rs  main.rs  middleware.rs  moderation.rs  pdf.rs  protocol.rs  rate_limit.rs  rooms.rs  safety.rs  storage.rs  stripe_handler.rs  subtitles.rs  transcripts.rs  translator.rs  usage.rs
server/src/ai/: email_draft.rs  mod.rs  report.rs  sentiment.rs
server/src/templates/: transcript.typ
server/tests/: billing.rs  config_env.rs  glossary.rs  integration.rs  transcripts.rs
server/tests/fixtures/: sample.webm
specs/: README.md  _TEMPLATE.md
specs/0001-voice-translation-rooms/: spec.md
specs/0002-video-calls-translated-chat/: spec.md
specs/0003-client-experience-pwa/: spec.md
specs/0004-quality-testing-ci/: spec.md
specs/0005-accounts-credits-billing/: spec.md
specs/0006-trust-safety-gdpr/: spec.md
specs/0007-backoffice-directus/: spec.md
specs/0008-managed-content-i18n/: spec.md
specs/0009-session-transcripts/: spec.md
specs/0010-composite-recording/: spec.md
specs/0011-room-glossary/: spec.md
specs/0012-auto-language-detection/: spec.md
specs/0013-call-bookmarks/: spec.md
specs/0014-ai-session-report/: spec.md
specs/0015-sentiment-analysis/: spec.md
specs/0016-follow-up-email/: spec.md
specs/0017-virtual-background/: spec.md
specs/0018-chat-file-upload/: spec.md
specs/0019-admin-bonus-credits/: spec.md
specs/0020-session-sound-cues-sticky-reactions/: spec.md
specs/0021-display-fixes-mirror-stacking/: spec.md
(+7 files in other folders)
