[package]
name = "voxtranslate-server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
url = "2"

# Auth + billing
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "rust_decimal", "macros", "migrate", "json"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"

# Transcript PDF export (spec 0009). Exact pins: typst-as-lib tracks typst
# minor versions closely, so we upgrade all three together, deliberately.
chrono-tz = "0.10"
typst = "=0.14.2"
typst-pdf = "=0.14.2"
typst-as-lib = "=0.15.5"

# Chat file upload (spec 0018): extract text from uploaded text-layer PDFs.
pdf-extract = "0.7"

[profile.release]
opt-level = 3
lto = "thin"
